--- a/core/sh/templates/employee/list.html
+++ b/core/sh/templates/employee/list.html
@@ -9,14 +9,12 @@
 
 {% block columns %}
 
-  <th scope="col" style="width: 5%;">Id</th>
-  <th scope="col" style="width: 5%;">Imagen</th>
-  <th scope="col" style="width: 15%;">Nombre</th>
-  <th scope="col" style="width: 15%;">Apellido</th>
-  <th scope="col" style="width: 10%;">Usuario PC</th>
+  <th scope="col" style="width: 25%;">Nombre y Apellido</th>
+  <th scope="col" style="width: 5%;">Usuario PC</th>
   <th scope="col" style="width: 10%;">Estado</th>
-  <th scope="col" style="width: 25%;">Oficina</th>
-  <th scope="col" style="width: 20%;">Opciones</th>
+  <th scope="col" style="width: 45%;">Oficina</th>
+  <th scope="col" style="width: 5%;">Imagen</th>
+  <th scope="col" style="width: 15%;">Opciones</th>
 
 {% endblock columns %}
 
