employee popups ok, working on device popups and extras

--- a/core/sh/templates/office/create.html
+++ b/core/sh/templates/office/create.html
@@ -51,7 +51,8 @@
             </div>
             <div class="form-group mt-2">
                 <div class="mt-2">
-                    <label for="id_edifice">Dependencia: </label>  <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="dependency_popup_add"><i class="fas fa-plus"></i></button>
+                    <label for="id_edifice">Dependencia: </label>
+                    <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="dependency_popup_add"><i class="fas fa-plus"></i></button>
                 </div>
                 {{ form.dependency }}
                 {% if form.dependency.errors %}
