--- a/core/sh/templates/wall_port/create.html
+++ b/core/sh/templates/wall_port/create.html
@@ -96,7 +96,7 @@
           {% endif %}
         </div>
         <div class="form-group col-6">
-          <label for="id_wall_port">Puerto de la Pared:</label>
+          <label for="id_wall_port">Boca de Pared:</label>
           {{ form.wall_port }}
           {% if form.wall_port.errors %}
           <div class="invalid-feedback d-block">
