--- a/core/sh/templates/patchera/create.html
+++ b/core/sh/templates/patchera/create.html
@@ -10,103 +10,117 @@
 {% endblock extra_refs %}
 
 {% block form %}
-<button id="toggle-rack-filters" class="btn {{filter_btn_color}} mb-1" type="button"> Filtrar Rack <i class="fas fa-search"></i></button>
-<div id="filter-rack-cards" class="d-none">
-  <div class="row">
-    <div class="container">
-    <!-- Tarjeta Filtros Geográficos -->
-      <div class="card mt-1">
-        <div class="card-header {{bg_color}}">
-          Filtrar Rack
+<div class="container mt4">
+    <div class="card">
+        <div class="card-header d-flex justify-content-between align-items-center {{bg_color}} ">
+            <h3 class="card-title">Seleccione el rack</h3>
         </div>
-        <div class="card-body row">
-          <div class="form-group col-6">
-            <label for="id_brand">Provincia:</label>
-            {{ form.province }}
-            {% if form.province.errors %}
-            <div class="invalid-feedback d-block">
-              {{ form.province.errors|join:"<br>" }}
-            </div>
-            {% endif %}
-          </div>
+        <div class="card-body">
+            <button id="toggle-rack-filters" class="btn {{filter_btn_color}} mb-2" type="button"> Filtros <i class="fa fa-filter"></i></button>
+            <div id="filter-rack-cards" class="d-none">
+                <div class="row">
+                    <div class="container">
+                        <div class="card text-white bg-secondary mt-1">
+                            <div class="card-header">
+                                Filtrar Rack
+                            </div>
+                            <div class="card-body row">
+                                <div class="form-group col-12">
+                                    <label for="id_province">Provincia: </label>
+                                    {{ form.province }}
+                                    {% if form.province.errors %}
+                                    <div class="invalid-feedback d-block">
+                                        {{ form.province.errors|join:"<br>" }}
+                                    </div>
+                                    {% endif %}
+                                </div>
 
-          <div class="form-group col-6">
-            <label for="id_model">Localidad:</label>
-            {{ form.location }}
-            {% if form.location.errors %}
-            <div class="invalid-feedback d-block">
-              {{ form.location.errors|join:"<br>" }}
-            </div>
-            {% endif %}
-          </div>
+                                <div class="form-group col-12">
+                                    <label for="id_location">Localidad: </label>
+                                    {{ form.location }}
+                                    {% if form.location.errors %}
+                                    <div class="invalid-feedback d-block">
+                                        {{ form.location.errors|join:"<br>" }}
+                                    </div>
+                                    {% endif %}
+                                </div>
 
-          <div class="form-group col-6">
-            <label for="id_edifice">Edificio:</label>
-            {{ form.edifice }}
-            {% if form.edifice.help_text %}
-            <small class="form-text text-muted">{{form.edifice.help_text}}</small>
-            {% endif %}
-            {% if form.edifice.errors %}
-            <div class="invalid-feedback d-block">
-              {{ form.edifice.errors|join:"<br>" }}
-            </div>
-            {% endif %}
-          </div>
+                                <div class="form-group col-6">
+                                    <label for="id_edifice">Edificio: </label>
+                                    {{ form.edifice }}
+                                    {% if form.edifice.help_text %}
+                                    <small class="form-text text-muted">{{form.edifice.help_text}}</small>
+                                    {% endif %}
+                                    {% if form.edifice.errors %}
+                                    <div class="invalid-feedback d-block">
+                                        {{ form.edifice.errors|join:"<br>" }}
+                                    </div>
+                                    {% endif %}
+                                </div>
 
-          <div class="form-group col-6">
-            <label for="id_loc">Locacion de Oficina:</label>
-            {{ form.loc }}
-            {% if form.loc.errors %}
-            <div class="invalid-feedback d-block">
-              {{ form.loc.errors|join:"<br>" }}
-            </div>
-            {% endif %}
-          </div>
+                                <div class="form-group col-6">
+                                    <label for="id_loc">Locacion de Oficina: </label>
+                                    {{ form.loc }}
+                                    {% if form.loc.errors %}
+                                    <div class="invalid-feedback d-block">
+                                        {{ form.loc.errors|join:"<br>" }}
+                                    </div>
+                                    {% endif %}
+                                </div>
 
-          <div class="form-group col-12">
-            <label for="id_office">Oficina:</label>
-            {{ form.office }}
-            {% if form.office.errors %}
-            <div class="invalid-feedback d-block">
-              {{ form.office.errors|join:"<br>" }}
+                                <div class="form-group col-6">
+                                    <label for="id_loc">Oficina: </label>
+                                    {{ form.loc }}
+                                    {% if form.loc.errors %}
+                                    <div class="invalid-feedback d-block">
+                                        {{ form.loc.errors|join:"<br>" }}
+                                    </div>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            {% endif %}
-          </div>
 
-          <div>
-            <small class="form-text text-muted">* Recomendado para filtrar oficinas</small>
-          </div>
+            <div class="form-group">
+                <label for="rack_patchera_id">Rack:</label>
+                <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="rack_popup_add"><i class="fas fa-plus"></i></button>
+                {{ form.rack }}
+                {% if form.rack.errors %}
+                <div class="invalid-feedback d-block">
+                    {{ form.rack.errors|join:"<br>" }}
+                </div>
+                {% endif %}
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-</div>
-
-<div class="form-group">
-  <label for="rack_id">Rack:</label>
-  {{ form.rack }}
-  {% if form.rack.errors %}
-    <div class="invalid-feedback d-block">
-      {{ form.rack.errors|join:"<br>" }}
+    <div class="card">
+        <div class="card-header d-flex justify-content-between align-items-center {{bg_color}} ">
+            <h3 class="card-title">Ingrese la patchera</h3>
+        </div>
+        <div class="card-body">
+            <div class="form-group">
+                <label for="id_patch">Patchera: </label>
+                {{ form.patchera }}
+                {% if form.patchera.help_text %}
+                <small class="form-text text-muted">{{form.patchera.help_text}}</small>
+                {% endif %}
+                {% if form.patchera.errors %}
+                <div class="invalid-feedback d-block">
+                    {{ form.patchera.errors|join:"<br>" }}
+                </div>
+                {% endif %}
+            </div>
+        </div>
     </div>
-  {% endif %}
-</div>
-
-<div class="form-group">
-  <label for="id_patch">Patchera:</label>
-  {{ form.patchera }}
-  {% if form.patchera.help_text %}
-    <small class="form-text text-muted">{{form.patchera.help_text}}</small>
-  {% endif %}
-  {% if form.patchera.errors %}
-    <div class="invalid-feedback d-block">
-      {{ form.patchera.errors|join:"<br>" }}
-    </div>
-  {% endif %}
 </div>
 {% endblock form %}
 
 {% block form_scripts %}
   <script src="{% static 'js/filters.js' %}"></script>
   <script src="{% static 'patchera/js/form.js' %}"></script>
+  <script>
+    let rackAddUrl = "{% url 'sh:rack_add' %}";
+  </script>
 {% endblock form_scripts %}
