--- a/core/sh/templates/switch/create.html
+++ b/core/sh/templates/switch/create.html
@@ -19,6 +19,7 @@
       <div class="row mt-2">
         <div class="form-group col-4">
           <label for="id_brand">Marca:</label>
+          <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="brand_popup_add"><i class="fas fa-plus"></i></button>
           {{ form.brand }}
           {% if form.brand.errors %}
           <div class="invalid-feedback d-block">
@@ -28,6 +29,7 @@
         </div>
         <div class="form-group col-4">
           <label for="id_model">Modelo:</label>
+          <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="dev_model_popup_add"><i class="fas fa-plus"></i></button>
           {{ form.model }}
           {% if form.model.errors %}
           <div class="invalid-feedback d-block">
@@ -150,6 +152,7 @@
               <div class="row">
                 <div class="form-group col-12">
                   <label for="id_office">Oficina:</label>
+                  <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="office_popup_add"><i class="fas fa-plus"></i></button>
                   {{ form.office }}
                   {% if form.office.errors %}
                   <div class="invalid-feedback d-block">
@@ -170,6 +173,7 @@
               <div class="row">
                 <div class="form-group col-6">
                   <label for="id_rack">Rack:</label>
+                  <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="rack_popup_add"><i class="fas fa-plus"></i></button>
                   {{ form.rack }}
                   {% if form.rack.errors %}
                     <div class="invalid-feedback d-block">
@@ -272,6 +276,7 @@
       </div>
       <div class="form-group mt-3">
         <label for="id_wall_port_in">Puerto de la Pared de Ingreso:</label>
+        <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="wall_port_popup_add"><i class="fas fa-plus"></i></button>
         {{ form.wall_port_in }}
         {% if form.wall_port_in.errors %}
         <div class="invalid-feedback d-block">
@@ -281,6 +286,7 @@
       </div>
       <div class="form-group">
         <label for="id_switch_port_in">Puerto del Switch de Ingreso:</label>
+        <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="switch_port_popup_add"><i class="fas fa-plus"></i></button>
         {{ form.switch_port_in }}
         {% if form.switch_port_in.errors %}
         <div class="invalid-feedback d-block">
@@ -290,6 +296,7 @@
       </div>
       <div class="form-group">
         <label for="id_patch_port_in">Puerto de la Patchera de Ingreso:</label>
+        <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="patch_port_popup_add"><i class="fas fa-plus"></i></button>
         {{ form.patch_port_in }}
         {% if form.patch_port_in.errors %}
         <div class="invalid-feedback d-block">
@@ -306,4 +313,13 @@
 {% block form_scripts %}
   <script src="{% static 'js/filters.js' %}"></script>
   <script src="{% static 'switch/js/form.js' %}"></script>
+  <script>
+    let modelAddUrl = "{% url 'sh:dev_model_add' %}";
+    let brandAddUrl = "{% url 'sh:brand_add' %}";
+    let officeAddUrl = "{% url 'sh:office_add' %}";
+    let rackAddUrl = "{% url 'sh:rack_add' %}";
+    let wallPortAddUrl = "{% url 'sh:wall_port_add' %}";
+    let switchPortAddUrl = "{% url 'sh:switch_port_add' %}";
+    let patchPortAddUrl = "{% url 'sh:patch_port_add' %}";
+  </script>
 {% endblock form_scripts %}
