--- a/core/sh/templates/wall_port/popup_add.html
+++ b/core/sh/templates/wall_port/popup_add.html
@@ -51,7 +51,7 @@
             </div>
 
             <div class="form-group">
-                <label for="{{ form.patch_port_in.id_for_label }}">Puero de la Patchera de Ingreso: </label>
+                <label for="{{ form.patch_port_in.id_for_label }}">Puerto de la Patchera de Ingreso: </label>
                 <button type="button" class="btn btn-sm {{btn_color}} ml-2 mb-1" id="patch_port_popup_add"><i class="fas fa-plus"></i></button>
                 {{ form.patch_port_in }}
                 {% if form.patch_port_in.errors %}
@@ -153,7 +153,7 @@
     <script>
         $(document).ready(function() {
             function loadSwitchPortsIn(officeId) {
-                let select = $('#id_office');
+                let select = $('#id_switch_port_in');
                 if (officeId) {
                     $.ajax({
                         url: "{% url 'sh:get_switch_ports_by_office' %}",
@@ -198,7 +198,7 @@
     <script>
         $(document).ready(function() {
             function loadPatchPortsIn(officeId) {
-                let select = $('#id_office');
+                let select = $('#id_patch_port_in');
                 if (officeId) {
                     $.ajax({
                         url: "{% url 'sh:get_patch_ports_by_office' %}",
