--- a/core/sh/templates/switch/create.html
+++ b/core/sh/templates/switch/create.html
@@ -275,7 +275,7 @@
         </div>
       </div>
       <div class="form-group mt-3">
-        <label for="id_wall_port_in">Puerto de la Pared de Ingreso:</label>
+        <label for="id_wall_port_in">Boca de Pared de Ingreso:</label>
         <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="wall_port_popup_add"><i class="fas fa-plus"></i></button>
         {{ form.wall_port_in }}
         {% if form.wall_port_in.errors %}
