switch patch_port and wallport ok

--- a/core/sh/templates/patch_port/popup_add.html
+++ b/core/sh/templates/patch_port/popup_add.html
@@ -31,7 +31,7 @@
 
             <div class="form-group">
                 <label for="{{ form.patchera.id_for_label }}">Patchera: </label>
-                <button type="button" class="btn btn-sm {{btn_color}} ml-2 mb-1" id="rack_popup_add"><i class="fas fa-plus"></i></button>
+                <button type="button" class="btn btn-sm {{btn_color}} ml-2 mb-1" id="patchera_popup_add"><i class="fas fa-plus"></i></button>
                 {{ form.patchera }}
                 {% if form.patchera.errors %}
                     <div class="invalid-feedback d-block">{{ form.patchera.errors|join:"<br>" }}</div>
