--- a/core/sh/templates/switch/popup_add.html
+++ b/core/sh/templates/switch/popup_add.html
@@ -104,6 +104,8 @@
                   <div class="invalid-feedback d-block">{{ form.patch_port_in.errors|join:"<br>" }}</div>
                 {% endif %}
             </div>
+
+            <button type="submit" class="btn btn-primary">Guardar <i class="fas fa-save"></i></button>
         </form>
     </div>
     <script src="{% static 'lib/select2_4.1.0/dist/js/select2.full.min.js' %}"></script>
