--- a/core/sh/templates/switch_port/popup_add.html
+++ b/core/sh/templates/switch_port/popup_add.html
@@ -72,7 +72,10 @@
             formSelector: '#switch_portForm',
             onSuccess: function(response) {
                 console.log('Switch agregado:', response);
-            }
+            },
+            width: 800,
+            height: 1080
+
         })
 
         window.addEventListener('message', function(event) {
