--- a/core/sh/templates/device/create.html
+++ b/core/sh/templates/device/create.html
@@ -311,7 +311,7 @@
             </div>
 
             <div class="form-group">
-                <label for="id_wall_port_in">Puerto de Pared:</label>
+                <label for="id_wall_port_in">Boca de Pared:</label>
                 <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="wall_port_popup_add"><i class="fas fa-plus"></i></button>
                 {{ form.wall_port_in }}
                 {% if form.wall_port_in.errors %}
